--- a/PERMON_v2/resources/configuration/app_config-sample.json
+++ b/PERMON_v2/resources/configuration/app_config-sample.json
@@ -1,7 +1,8 @@
 {
 	"app": {
 		"name":"PERMON",
-		"dbPath":"data.db"
+		"dbPath":"data.db",
+		"logFilePath":"log.json"
 	},
 	"stravaAPI": {
 		"clientId":1234,
