--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.0"
 services:
   permon:
     container_name: permon
-    image: vnevyhosteny/permon
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: vnevyhosteny/permon:0.0.1
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     restart: always
     # Setting this to something other than 'root' will cause shiny apps not to
     # run on the localhost:80 "Welcome to Shiny" diagnostics page mentioned
@@ -14,14 +14,3 @@ services:
     user: 'root'
     ports:
       - '8100:3838'
-    #volumes:
-      #- 'shiny_logs:/var/log/shiny-server'
-      # Comment the line below out for initial testing. With it commented out,
-      # going to localhost:80 in one's web browser will show a "Welcome to
-      # Shiny Server!" diagnostics page.
-      # - './mountpoints/apps:/srv/shiny-server'
-      # - 'shiny_apps:/srv/shiny-server'
-
-#volumes:
-  #shiny_logs:
-  #shiny_apps:
